<resources>
    <string name="app_name">Smarthome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- STRING FOR AUTH -->
    <string name="access_token">access-token</string>
    <string name="token_type">token-type</string>
    <string name="client">client</string>
    <string name="expiry">expiry</string>
    <string name="uid">uid</string>

    <string name="bearer">Bearer</string>

    <string name="ac_on">Power ON</string>
    <string name="ac_off">Power OFF</string>

    <string name="please_wait">Please Wait...</string>
    <string name="network_error">Failed to Connect to Server! Please Check your internet connection!</string>

    <!--PROFILE-->
    <string name="account">Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="home_setting">Home Setting</string>
    <string name="add_device">Add device</string>
    <string name="add_house">Add House</string>
    <string name="sign_out">Sign Out</string>
    <string name="not_admin">You are not an admin of this house. Settings can only be accessed by house admin.</string>
    
    <!--HOME-->
    <string name="daya_terpasang">Daya Terpasang</string>
    <string name="energy_consumption">Energy Consumption</string>
    <string name="monthly_usage">Monthly Usage</string>
    <string name="monthly_limit">Monthly Limit</string>
    <string name="kwh">Kwh</string>
    <string name="rp">Rp</string>
    <string name="show_full_history">show full history</string>
    
    <!--HOME SETTING-->
    <string name="home_id">Home ID</string>
    <string name="gateway">Gateway</string>
    <string name="notif_setting">Notification setting</string>
    <string name="cost">Cost</string>
    <string name="energy">Energy</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="co2">CO2</string>
    <string name="light">Light</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="prompt_name">Change Home Name</string>
    <string name="prompt_home_id">Change Home ID</string>
    <string name="prompt_gateway">Change Gateway</string>
    <string name="prompt_energy">Change Energy Limit</string>
    <string name="prompt_cost">Change Cost Limit</string>
    <string name="prompt_temp">Change Temperature Limit</string>
    <string name="prompt_hum">Change Humidity Limit</string>
    <string name="prompt_co2">Change CO2 Limit</string>
    <string name="prompt_light">Change Light Limit</string>
    <string name="upper_limit">Upper Limit</string>
    <string name="lower_limit">Lower Limit</string>

    <string name="message_delete">Are you sure want to delete</string>

    <string name="notifications">Notifications</string>
    <string name="show_all_notif"><u>Show all notifications</u></string>
    <string name="failed_delete">Incorrect Password! Failed to delete device!</string>

    <string name="edit_device">Edit Device</string>
    <string name="delete">Delete</string>

    <string name="blank_password">Please enter password</string>

    <string name="fa_arrow_left">&#xf060;</string>
    <string name="fa_caret_down">&#xf0d7;</string>
    <string name="fa_chevron_down">&#xf078;</string>
    <string name="fa_chevron_right">&#xf054;</string>
    <string name="fa_gear">&#xf013;</string>
    <string name="fa_home">&#xf015;</string>
</resources>
