<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginRight="32dp"
    android:layout_marginLeft="32dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_white_rounded">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textSize="16sp"
        android:text="@string/message_delete"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textSize="16sp"
        tools:text="Device Dapur ?"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:paddingLeft="16dp"
        android:background="@drawable/edittext_white_rounded"
        android:hint="Password"
        android:textSize="14sp"
        android:textColorHint="@color/hintColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:id="@+id/card_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="4dp"
            app:contentPaddingTop="8dp"
            app:cardElevation="4dp"
            app:contentPaddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/cancel"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="4dp"
            app:cardBackgroundColor="@color/red"
            app:cardCornerRadius="4dp"
            app:contentPaddingTop="8dp"
            app:cardElevation="4dp"
            app:contentPaddingBottom="8dp">
            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/ok"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>