<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginRight="32dp"
    android:layout_marginLeft="32dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_white_rounded">
    <TextView
        android:id="@+id/tv_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textSize="16sp"
        android:text="Change Home Name"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:paddingLeft="16dp"
        android:background="@drawable/edittext_white_rounded"
        android:hint="Rumah Nomor 1"
        android:textSize="14sp"
        android:textColorHint="@color/hintColor"/>
    <EditText
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:inputType="number"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:paddingLeft="16dp"
        android:background="@drawable/edittext_white_rounded"
        android:hint="10000"
        android:textSize="14sp"
        android:textColorHint="@color/hintColor"/>
    <LinearLayout
        android:id="@+id/et_upper_lower"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/upper_limit"/>
        <EditText
            android:id="@+id/et_number1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:inputType="number"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingRight="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/edittext_white_rounded"
            android:hint="10000"
            android:textSize="14sp"
            android:textColorHint="@color/hintColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/lower_limit"/>
        <EditText
            android:id="@+id/et_number2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:inputType="number"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingRight="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/edittext_white_rounded"
            android:hint="10000"
            android:textSize="14sp"
            android:textColorHint="@color/hintColor"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/gateway1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp">
        <EditText
            android:id="@+id/et_gateway1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginBottom="16dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            android:paddingRight="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/edittext_white_rounded"
            android:hint="12345678"
            android:textColorHint="@color/hintColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"/>
        <EditText
            android:id="@+id/et_gateway2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:paddingBottom="8dp"
            android:paddingRight="8dp"
            android:paddingLeft="16dp"
            android:textSize="14sp"
            android:background="@drawable/edittext_white_rounded"
            android:hint="12345678"
            android:textColorHint="@color/hintColor"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/gateway2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp">

        <EditText
            android:id="@+id/et_gateway3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginBottom="10dp"
            android:paddingRight="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/edittext_white_rounded"
            android:hint="12345678"
            android:textColorHint="@color/hintColor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"/>
        <EditText
            android:id="@+id/et_gateway4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:paddingBottom="8dp"
            android:paddingRight="8dp"
            android:paddingLeft="16dp"
            android:background="@drawable/edittext_white_rounded"
            android:hint="12345678"
            android:textColorHint="@color/hintColor"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">
        <android.support.v7.widget.CardView
            android:id="@+id/card_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="8dp"
            app:cardCornerRadius="4dp"
            app:contentPaddingTop="8dp"
            app:cardElevation="4dp"
            app:contentPaddingBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cancel"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="4dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="4dp"
            app:contentPaddingTop="8dp"
            app:cardElevation="4dp"
            app:contentPaddingBottom="8dp">
            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/ok"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>